@@ -3,8 +3,8 @@ SUBDIRS = doc
 EXTRA_DIST = gnome-doc-utils.make
 
 all-local:
-	@echo "-------------------------------------------------------"
-	@echo "This Makefile is only used to build documentation"
-	@echo "Type make -f Makefile.plain to build or install JhBuild"
-	@echo "-------------------------------------------------------"
+	$(MAKE) -f Makefile.plain
+
+install-exec-local:
+	$(MAKE) -f Makefile.plain install
 
