@@ -1,3 +1,7 @@
+2007-08-25  Frederic Peters  <fpeters@0d.be>
+
+	* Makefile.am, autogen.sh: hooked Makefile.plain to Makefile.am
+
 2007-08-18  Jaap Haitsma  <jaap@haitsma.org>
 
 	* modulesets/gnome-2.20.modules: Add ghex. Fixes bug #468023
